--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="message">ПИПИДАСТР</div>
+        <div id="message">ПИПИДАСТ</div>
     </div>
 
     <script>
