--- a/index.html
+++ b/index.html
@@ -27,26 +27,31 @@
         
         #word {
             display: none;
-            font-size: 72px;
+            font-size: 48px;
             font-weight: bold;
-            color: #39FF14; /* Ярко-зеленый цвет */
+            color: #00FF00; /* Ярко-зеленый цвет */
             text-align: center;
         }
     </style>
 </head>
 <body>
-    <div id="word">Код спойлера: ЮЗИЛИЩЕ</div>
+    <!-- Пустая страница до тапов -->
+    <div id="word">ЮЗИЛИЩЕ</div>
     
     <script>
         let tapCount = 0;
         const maxTaps = 10;
         const wordElement = document.getElementById('word');
         
+        // Гарантируем, что текст скрыт при загрузке
+        wordElement.style.display = 'none';
+        
         function handleTap() {
             tapCount++;
             
             if (tapCount >= maxTaps) {
                 wordElement.style.display = 'block';
+                document.body.style.cursor = 'default';
                 document.body.removeEventListener('click', handleTap);
                 document.body.removeEventListener('touchstart', handleTouch);
             }
@@ -63,11 +68,6 @@
         document.addEventListener('contextmenu', function(e) {
             e.preventDefault();
             return false;
-        });
-        
-        // Скрываем текст при загрузке (дополнительная защита)
-        window.addEventListener('load', function() {
-            wordElement.style.display = 'none';
         });
     </script>
 </body>
