--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-    <div class="secret-word" id="secretWord">юзилище</div>
+    <div class="secret-word" id="secretWord">юзилищЕ</div>
 
     <script>
         // Элемент со словом
