--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 24px;
-            color: #00FF00;
+            color: green;
             font-weight: bold;
             text-shadow: 0 0 10px rgba(0, 255, 0, 0.8);
             visibility: hidden; /* Скрываем через visibility */
