--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <div id="secretWord" style="display: none;">Юзилище</div>
+    <div id="secretWord" style="display: none;">Юзилищ</div>
     
     <script>
         // Сначала полностью прячем элемент через inline стиль
